nodejs/rest-api/rest-api-004/setup/k8s/my-mongo/01-svc1.yml
kind: Service
apiVersion: v1
metadata:
  name: my-mongo-svc
spec:
  selector:
    app: my-mongo
  ports:
    - port: 9010 #

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-mongo
  labels:
    role: my-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      role: my-mongo

  template:
    metadata:
      labels:
        role: my-mongo

    spec:
      containers:
      - name: my-mongo
        image: mongo
        args: ["--dbpath","/data/db"]
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
