nodejs/rest-api/rest-api-004/setup/k8s/my-mongo/02-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: nginx-demo.com
      http:
        paths:
        
          - path: /apple #/(.*)
            pathType: Prefix # Prefix|Exact
            backend:
              service:
                name: apple-service
                port:
                  number: 5678

          - path: /banana
            pathType: Prefix
            backend:
              service:
                name: banana-service
                port:
                  number: 5678
